--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,23 @@
-amqp==5.0.6
-beautifulsoup4==4.9.3
-billiard==3.6.4.0
-celery==5.1.2
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.2.0
-cycler==0.10.0
-flower==1.0.0
-flwr==0.16.0
-google==2.0.3
-grpcio==1.39.0
-humanize==3.11.0
-imbalanced-learn==0.8.0
+cycler==0.11.0
+fonttools==4.33.3
+imbalanced-learn==0.9.0
 imblearn==0.0
-joblib==1.0.1
-kiwisolver==1.3.2
-kombu==5.1.0
-matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.2
-Pillow==8.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-protobuf==3.17.3
-pyparsing==2.4.7
+joblib==1.1.0
+kiwisolver==1.4.2
+matplotlib==3.5.2
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.2
+Pillow==9.1.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2021.1
-scikit-learn==0.24.2
-scipy==1.7.1
+pytz==2022.1
+scikit-learn==1.1.0
+scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
-soupsieve==2.2.1
-threadpoolctl==2.2.0
-torch==1.9.0
-tornado==6.1
-tqdm==4.62.2
-typing-extensions==3.10.0.2
-vine==5.0.0
-wcwidth==0.2.5
+sklearn==0.0
+threadpoolctl==3.1.0
+torch==1.11.0
+tqdm==4.64.0
+typing_extensions==4.2.0
